--- a/proj.win32/UiEditor.vcxproj
+++ b/proj.win32/UiEditor.vcxproj
@@ -132,31 +132,39 @@ xcopy /Y /Q "$(ProjectDir)..\..\..\external\libwebsockets\win32\lib\*.*" "$(OutD
     </PreLinkEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\cocos2dx\support\tinyxml2\tinyxml2.cpp" />
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\MainScene.cpp" />
-    <ClCompile Include="..\Classes\UiEditLayer.cpp" />
+    <ClCompile Include="..\Classes\UiWidgetsLayer.cpp" />
     <ClCompile Include="..\Classes\UiEditorManager.cpp" />
+    <ClCompile Include="..\Classes\UiEditorNotifier.cpp" />
     <ClCompile Include="..\Classes\UiLayer.cpp" />
     <ClCompile Include="..\Classes\UiLayerAttrs.cpp" />
     <ClCompile Include="..\Classes\UiLayerItems.cpp" />
     <ClCompile Include="..\Classes\UiWidgetButton.cpp" />
     <ClCompile Include="..\Classes\UiWidgetImage.cpp" />
+    <ClCompile Include="..\Classes\UiWidgetsManager.cpp" />
     <ClCompile Include="..\Classes\UiWidgetLabel.cpp" />
     <ClCompile Include="..\Classes\UiWidgetNode.cpp" />
+    <ClCompile Include="..\Classes\XmlHelper.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\cocos2dx\support\tinyxml2\tinyxml2.h" />
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\MainScene.h" />
-    <ClInclude Include="..\Classes\UiEditLayer.h" />
+    <ClInclude Include="..\Classes\UiWidgetsLayer.h" />
     <ClInclude Include="..\Classes\UiEditorManager.h" />
+    <ClInclude Include="..\Classes\UiEditorNotifier.h" />
     <ClInclude Include="..\Classes\UiLayer.h" />
     <ClInclude Include="..\Classes\UiLayerAttrs.h" />
     <ClInclude Include="..\Classes\UiLayerItems.h" />
     <ClInclude Include="..\Classes\UiWidgetButton.h" />
     <ClInclude Include="..\Classes\UiWidgetImage.h" />
+    <ClInclude Include="..\Classes\UiWidgetsManager.h" />
     <ClInclude Include="..\Classes\UiWidgetLabel.h" />
     <ClInclude Include="..\Classes\UiWidgetNode.h" />
+    <ClInclude Include="..\Classes\XmlHelper.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
