--- a/proj.win32/UiEditor.vcxproj
+++ b/proj.win32/UiEditor.vcxproj
@@ -132,15 +132,14 @@ xcopy /Y /Q "$(ProjectDir)..\..\..\external\libwebsockets\win32\lib\*.*" "$(OutD
     </PreLinkEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\cocos2dx\support\tinyxml2\tinyxml2.cpp" />
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\MainScene.cpp" />
-    <ClCompile Include="..\Classes\UiWidgetsLayer.cpp" />
+    <ClCompile Include="..\Classes\UiWidgetsLayout.cpp" />
     <ClCompile Include="..\Classes\UiEditorManager.cpp" />
     <ClCompile Include="..\Classes\UiEditorNotifier.cpp" />
     <ClCompile Include="..\Classes\UiLayer.cpp" />
-    <ClCompile Include="..\Classes\UiLayerAttrs.cpp" />
-    <ClCompile Include="..\Classes\UiLayerItems.cpp" />
+    <ClCompile Include="..\Classes\UiWidgetAttrsPanel.cpp" />
+    <ClCompile Include="..\Classes\UiWidgetBtnsPanel.cpp" />
     <ClCompile Include="..\Classes\UiWidgetButton.cpp" />
     <ClCompile Include="..\Classes\UiWidgetImage.cpp" />
     <ClCompile Include="..\Classes\UiWidgetsManager.cpp" />
@@ -150,15 +149,18 @@ xcopy /Y /Q "$(ProjectDir)..\..\..\external\libwebsockets\win32\lib\*.*" "$(OutD
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\cocos2dx\support\tinyxml2\tinyxml2.h" />
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\MainScene.h" />
-    <ClInclude Include="..\Classes\UiWidgetsLayer.h" />
+    <ClInclude Include="..\Classes\rapidxml\rapidxml.hpp" />
+    <ClInclude Include="..\Classes\rapidxml\rapidxml_iterators.hpp" />
+    <ClInclude Include="..\Classes\rapidxml\rapidxml_print.hpp" />
+    <ClInclude Include="..\Classes\rapidxml\rapidxml_utils.hpp" />
+    <ClInclude Include="..\Classes\UiWidgetsLayout.h" />
     <ClInclude Include="..\Classes\UiEditorManager.h" />
     <ClInclude Include="..\Classes\UiEditorNotifier.h" />
     <ClInclude Include="..\Classes\UiLayer.h" />
-    <ClInclude Include="..\Classes\UiLayerAttrs.h" />
-    <ClInclude Include="..\Classes\UiLayerItems.h" />
+    <ClInclude Include="..\Classes\UiWidgetAttrsPanel.h" />
+    <ClInclude Include="..\Classes\UiWidgetBtnsPanel.h" />
     <ClInclude Include="..\Classes\UiWidgetButton.h" />
     <ClInclude Include="..\Classes\UiWidgetImage.h" />
     <ClInclude Include="..\Classes\UiWidgetsManager.h" />
