--- a/proj.win32/UiEditor.vcxproj
+++ b/proj.win32/UiEditor.vcxproj
@@ -133,7 +133,10 @@ xcopy /Y /Q "$(ProjectDir)..\..\..\external\libwebsockets\win32\lib\*.*" "$(OutD
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
+    <ClCompile Include="..\Classes\EmptyBox.cpp" />
     <ClCompile Include="..\Classes\MainScene.cpp" />
+    <ClCompile Include="..\Classes\UIEditorKeyboardListener.cpp" />
+    <ClCompile Include="..\Classes\UiWidgetEmptyBox.cpp" />
     <ClCompile Include="..\Classes\UiWidgetsLayout.cpp" />
     <ClCompile Include="..\Classes\UiEditorManager.cpp" />
     <ClCompile Include="..\Classes\UiEditorNotifier.cpp" />
@@ -150,11 +153,14 @@ xcopy /Y /Q "$(ProjectDir)..\..\..\external\libwebsockets\win32\lib\*.*" "$(OutD
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
+    <ClInclude Include="..\Classes\EmptyBox.h" />
     <ClInclude Include="..\Classes\MainScene.h" />
     <ClInclude Include="..\Classes\rapidxml\rapidxml.hpp" />
     <ClInclude Include="..\Classes\rapidxml\rapidxml_iterators.hpp" />
     <ClInclude Include="..\Classes\rapidxml\rapidxml_print.hpp" />
     <ClInclude Include="..\Classes\rapidxml\rapidxml_utils.hpp" />
+    <ClInclude Include="..\Classes\UIEditorKeyboardListener.h" />
+    <ClInclude Include="..\Classes\UiWidgetEmptyBox.h" />
     <ClInclude Include="..\Classes\UiWidgetsLayout.h" />
     <ClInclude Include="..\Classes\UiEditorManager.h" />
     <ClInclude Include="..\Classes\UiEditorNotifier.h" />
