--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ proj.win32/*
 !UiEditor.vcxproj
 !UiEditor.vcxproj.filters
 !UiEditor.vcxproj.user
+!UiEditor.sln
+!proj.win32/main.cpp
+!proj.win32/main.h
 proj.winrt
 proj.wp8-xaml
 proj.wp8
