--- a/proj.win32/UiEditor.vcxproj.filters
+++ b/proj.win32/UiEditor.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="..\Classes\UiWidgetImageNum.cpp">
       <Filter>Widgets</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\UiWidgetAnimation.cpp">
+      <Filter>Widgets</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -150,6 +153,9 @@
       <Filter>Util</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\UiWidgetImageNum.h">
+      <Filter>Widgets</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\UiWidgetAnimation.h">
       <Filter>Widgets</Filter>
     </ClInclude>
   </ItemGroup>
